# proto-link

./: .env  .gitignore  .gitmodules  Cargo.toml  diesel.toml
migrations/2025-08-28-205738_create_users/: up.sql
migrations/2026-01-16-145026-0000_create_users/: down.sql  up.sql
migrations/2026-01-23-094831-0000_create_chats/: down.sql  up.sql
migrations/2026-01-23-095532-0000_create_chat_roles/: down.sql  up.sql
migrations/2026-01-23-100056-0000_create_chat_users/: up.sql
migrations/2026-01-23-151403-0000_create_challenges/: down.sql  up.sql
migrations/2026-01-23-151544-0000_create_tokens/: up.sql
src/: client_main.rs  server_main.rs
src/client/: client_encrypted_codec.rs  mod.rs
src/client/api/: api_consumer.rs  auth_api.rs  mod.rs
src/client/model/: auth_model.rs  mod.rs
src/db/: schema.rs  users_db.rs
src/handlers/: auth_handler.rs
src/server/: mod.rs  server_encrypted_codec.rs
src/server/db/: challenges_db.rs  mod.rs  schema.rs  tokens_db.rs  users_db.rs
src/server/handlers/: auth_handler.rs  chat_handler.rs  mod.rs  register_handler.rs
src/structures/: mod.rs  protolink_stype.rs
src/util/crypto/: challenge_util.rs  codec_util.rs  mod.rs
