[package]
name = "proto-link"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "server"
path = "src/server_main.rs"

[dependencies]
diesel = { version = "2.2.6", features = ["mysql", "time", "r2d2"]}
dotenvy = "0.15"
the-fourth-server = { path = "the-fourth-server"}
serde = { version = "1.0", features = ["derive"] }
num_enum = "0.7"