[package]
name = "proto-link"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "server"
path = "src/server_main.rs"

[[bin]]
name = "client"
path = "src/client_main.rs"

[dependencies]
diesel = { version = "2.2.6", features = ["mysql", "time", "r2d2"]}
dotenvy = "0.15"
the-fourth-server = { path = "the-fourth-server"}
serde = { version = "1.0", features = ["derive"] }
num_enum = "0.7"
base64 = "0.22"
sha2 = "0.10"
hkdf = "0.12"
aes-gcm = "0.10"
rand = "0.9.2"
subtle = "2.6"